# challenge-leaderboard

./: DEPLOYMENT.md  INVESTIGATION_REPORT.md  README.md  pyproject.toml  teams.yml
.github/workflows/: build-and-deploy.yml  score-daily.yml  validate-pr.yml
data/: actual_load.parquet  scores.parquet
public/: Certificate.md
scripts/: build_leaderboard.py  charts.py  fetch_actuals.py  score_day.py  validate_submission.py
submissions/Voltrion/: 2026-06-07.csv
submissions/a_team/: 2026-06-09.csv
submissions/ddkast/: 2026-06-09.csv  2026-06-10.csv
submissions/eigen_squad/: 2026-06-01.csv  2026-06-08.csv  2026-06-09.csv  2026-06-10.csv
submissions/entsoe/: 2026-06-01.csv
submissions/hot_rod/: 2026-05-26.csv  2026-06-01.csv  2026-06-08.csv  2026-06-09.csv  2026-06-10.csv
submissions/neura/: 2026-05-26.csv  2026-06-04.csv  2026-06-08.csv  2026-06-09.csv  2026-06-10.csv  2026-06-11.csv
submissions/syntaxerror/: 2026-06-11.csv
submissions/team_4/: 2026-05-27.csv  2026-05-29.csv  2026-05-31.csv  2026-06-01.csv  2026-06-06.csv  2026-06-08.csv  2026-06-09.csv  2026-06-10.csv
submissions/team_4_4zones/: 2026-06-10.csv
submissions/team_4_entsoe/: 2026-06-07.csv  2026-06-08.csv  2026-06-09.csv  2026-06-10.csv
submissions/team_4_entsoe_4zones/: 2026-06-10.csv
submissions/team_4_optuna/: 2026-06-01.csv  2026-06-04.csv
templates/: leaderboard.html.j2
tests/: conftest.py  test_build_leaderboard.py  test_charts.py  test_fetch_actuals.py  test_score_day.py  test_utc_pipeline.py  test_validate_submission.py  test_workflows_yaml.py
(+21 files in other folders)
