[project]
name = "challenge-leaderboard"
version = "0.1.0"
description = "Scoring + Leaderboard für die SS26-Lastprognose-Challenge."
requires-python = ">=3.13"
dependencies = [
    "spotforecast2-safe>=3.0.0,<4",
    "pandas>=2.2",
    "pyarrow>=15",
    "pyyaml>=6",
    "jinja2>=3.1",
    "entsoe-py>=0.6",
]

[dependency-groups]
dev = [
    "pytest>=8.2",
    "freezegun>=1.5",
]

[tool.uv]
# Pinnt indirekte Abhängigkeiten via uv.lock (CR-4: minimale, versionierte
# Sperrliste verbotener Abhängigkeiten; CR-2: bitweise Reproduzierbarkeit).

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"
